<resources>
    <string name="app_name">Goedangapp</string>
    <string name="sign_in_hero1">Welcome To</string>
    <string name="sign_in_hero2">goedang.</string>
    <string name="sign_in">Sign In</string>
    <string name="dashboard">Dashboard</string>
    <string name="sales">Sales</string>
    <string name="stock">Stock</string>
    <string name="profile">Profile</string>
    <string name="add_product">Tambah Produk</string>
    <string name="cabai">Cabai</string>
    <string name="quantity">QTY: 27</string>
    <string name="average">KG</string>
    <string name="idbarang">ID:123131</string>
    <string name="inventory">Inventory Overview</string>
    <string name="searchbar_hint">Cari Item</string>
    <string name="current">Current Stock</string>
    <string name="low">Low in Stock</string>
    <string name="recently">Recently Add</string>
    <string name="product">Product Stock</string>
    <string name="lowstock">Product Low in Stock</string>
    <string name="recentadd">Product Recently Add</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Tes</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register\n</string>
    <string name="or">Or</string>
    <string name="name">Name</string>
    <string name="full_name">Full Name</string>
    <string name="no_internet">No Internet Connection</string>
    <string name="no_internet_description">Please Check Your Internet Connection!</string>
    <string name="ok">OK</string>
    <string name="stockin">Stock-in</string>
</resources>